openshift/service-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-svc
  namespace: music-app
spec:
  selector:
    app: music-deploy
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 8080
