openshift/route-config.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: music-rt
  namespace: music-app
  labels: {}
spec:
  to:
    kind: Service
    name: music-svc
  tls: null
  port:
    targetPort: 8989
